Welcome message for those viewing source.

--- a/views/index.haml
+++ b/views/index.haml
@@ -9,6 +9,9 @@
   <!--<![endif]-->
   %head
     %meta{ :charset => "utf-8" }/
+    -#
+      Greeting, my source viewing friend. The source is MIT Licensed and available at
+      http://github.com/philoye/paris-picture-school
 
     -#
       Always force latest IE rendering engine (even in intranet) & Chrome Frame
