--- a/views/index.haml
+++ b/views/index.haml
@@ -8,32 +8,29 @@
 %html.no-js
   <!--<![endif]-->
   %head
-    %meta{ :charset => "utf-8" }/
+    %meta{ :charset => "utf-8" }
+
     -#
       Greeting, my source viewing friend. The source is MIT Licensed and available at
       http://github.com/philoye/paris-picture-school
 
     -#
       Always force latest IE rendering engine (even in intranet) & Chrome Frame
-      Remove this if you use the .htaccess
-    %meta{ :content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible" }/
+    %meta{ :content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible" }
 
     %title
-    %meta{ :content => "", :name => "description" }/
-    %meta{ :content => "", :name => "author" }/
+    %meta{ :content => "", :name => "description" }
+    %meta{ :content => "", :name => "author" }
 
     -# Mobile viewport optimized: j.mp/bplateviewport
-    %meta{ :content => "width=device-width, initial-scale=1.0", :name => "viewport" }/
+    %meta{ :content => "width=device-width, initial-scale=1.0", :name => "viewport" }
 
     -# Place favicon.ico and apple-touch-icon.png in the root of your domain and delete these references
     -# %link{ :href => "/favicon.ico", :rel => "shortcut icon" }/
     -# %link{ :href => "/apple-touch-icon.png", :rel => "apple-touch-icon" }/
 
     -# CSS: implied media="all"
-    %link{ :href => "css/style.css", :media => "all", :rel => "stylesheet" }/
-
-    -# Uncomment if you are specifically targeting less enabled mobile browsers
-    -# %link{ :href => "css/handheld.css?v=1", :media => "handheld", :rel => "stylesheet" }/
+    %link{ :href => "css/style.css", :media => "all", :rel => "stylesheet" }
 
     -# All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects
     %script{ :src => "js/modernizr.min.js" }
