updated source viewing greeting

--- a/views/index.haml
+++ b/views/index.haml
@@ -10,9 +10,17 @@
   %head
     %meta{ :charset => "utf-8" }
 
-    -#
-      Greeting, my source viewing friend. The source is MIT Licensed and available at
+    /
+
+      *************************************************************
+
+
+      Greetings, my source viewing friend. The code is open-source,
+      MIT Licensed, and available at
       http://github.com/philoye/paris-picture-school
+
+
+      *************************************************************
 
     -#
       Always force latest IE rendering engine (even in intranet) & Chrome Frame
