--- a/views/index.haml
+++ b/views/index.haml
@@ -168,7 +168,7 @@
     -#  asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet
     -#  change the UA-XXXXX-X to be your site's ID
     :javascript
-      var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview']];
+      var _gaq = [['_setAccount', '#{ENV['PARISPICTURESCHOOL_ANALYTICS']}', ['_trackPageview']];
       (function(d, t) {
        var g = d.createElement(t),
            s = d.getElementsByTagName(t)[0];
