--- a/views/index.haml
+++ b/views/index.haml
@@ -168,13 +168,10 @@
     -#  asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet
     -#  change the UA-XXXXX-X to be your site's ID
     :javascript
-      var _gaq = [['_setAccount', '#{ENV['PARISPICTURESCHOOL_ANALYTICS']}', ['_trackPageview']];
-      (function(d, t) {
-       var g = d.createElement(t),
-           s = d.getElementsByTagName(t)[0];
-       g.async = true;
-       g.src = ('https:' == location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       s.parentNode.insertBefore(g, s);
-      })(document, 'script');
+      var _gaq=[['_setAccount','#{ENV['PARISPICTURESCHOOL_ANALYTICS']}'],['_trackPageview']];
+      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+      g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+      s.parentNode.insertBefore(g,s)}(document,'script'));
+
 
 
