--- a/views/index.haml
+++ b/views/index.haml
@@ -45,17 +45,18 @@
 
   %body{ :lang => "en" }
     #outer-container
-      %img.snap#snap1{:src => 'images/paris-1.jpg'}
-      %img.snap#snap2{:src => 'images/tour-8.jpg'}
-      %img.snap#snap3{:src => 'images/paris-3.jpg'}
-      %img.snap#snap5{:src => 'images/paris-5.jpg'}
-      %img.snap#snap4{:src => 'images/paris-4.jpg'}
-      %img.snap#snap6{:src => 'images/paris-6.jpg'}
-      %img.snap#snap7{:src => 'images/tour-5.jpg'}
-      %img.snap#snap8{:src => 'images/tour-2.jpg'}
-      %img.snap#snap9{:src => 'images/paris-11.jpg'}
-      %img.snap#snap10{:src => 'images/paris-2.jpg'}
-      %img.snap#snap11{:src => 'images/tour-3.jpg'}
+      #images
+        %img.snap#snap1{:src => 'images/paris-1.jpg'}
+        %img.snap#snap2{:src => 'images/tour-8.jpg'}
+        %img.snap#snap3{:src => 'images/paris-3.jpg'}
+        %img.snap#snap5{:src => 'images/paris-5.jpg'}
+        %img.snap#snap4{:src => 'images/paris-4.jpg'}
+        %img.snap#snap6{:src => 'images/paris-6.jpg'}
+        %img.snap#snap7{:src => 'images/tour-5.jpg'}
+        %img.snap#snap8{:src => 'images/tour-2.jpg'}
+        %img.snap#snap9{:src => 'images/paris-11.jpg'}
+        %img.snap#snap10{:src => 'images/paris-2.jpg'}
+        %img.snap#snap11{:src => 'images/tour-3.jpg'}
       #container
         %header#siteheader
           %hgroup
