New way of doing the sass, heroku friendly

--- a/views/index.haml
+++ b/views/index.haml
@@ -38,7 +38,7 @@
     -# %link{ :href => "/apple-touch-icon.png", :rel => "apple-touch-icon" }/
 
     -# CSS: implied media="all"
-    %link{ :href => "css/style.css", :media => "all", :rel => "stylesheet" }
+    %link{ :href => "stylesheets/style.css", :media => "all", :rel => "stylesheet" }
 
     -# All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects
     %script{ :src => "js/modernizr.min.js" }
