--- a/views/index.haml
+++ b/views/index.haml
@@ -61,11 +61,11 @@
       #container
         %header#siteheader
           %hgroup
-            %h1 Paris Picture School
+            %h1 the Paris Picture School
             %h2 Learn how to take better photos in Paris
         %section#intro
-          %p Have fun discovering the magic of light &amp; composition in the city of light.
-          %p With each tour having a different movie theme and a actor supplied playing the main part, you will photograph the ancient palaces &amp; buildings, beautiful gardens &amp; hidden laneways of Paris as seen in the movies.
+          %p Have fun discovering the magic of light <span class="amp">&amp;</span> composition in the city of light.
+          %p With each tour having a different movie theme and a actor supplied playing the main part, you will photograph the ancient palaces <span class="amp">&amp;</span> buildings, beautiful gardens <span class="amp">&amp;</span> hidden laneways of Paris as seen in the movies.
           %p The small group (maximum 4 students) guarantees the individual attention that will transform the way you use your camera and enable you to simply take better photos.
           %p Wind your way through the famous quartiers of Paris with a local French actor/model whilst being shown all the secrets to taking great pictures by professional photographer <a href="http://laurafriezer.com/">Laura Friezer</a> who has photographed everyone from Bill Clinton to Morgan Freeman and everyone in between.
           %p Take your time to enjoy Paris in all its splendour before sitting down with your guides and fellow students in a Parisian restaurant to relax, review and discuss your photos over a classic French lunch.
@@ -80,7 +80,7 @@
               %h2 The “Amélie” Montmartre Photography Study Tour
               %h3 Learn how to take better photos in Paris with Amelie
               %img{:src => 'images/amelie.jpg', :width => '150', :height => '150', :title => "Amelie Poster"}
-              .cost <strong>€120</strong> per person, includes lunch (max 4 per class)
+              .cost €120 per person, includes lunch (max 4 per class)
 
             :markdown
               * Abbesses/Sacre Coeur/Rue Lepic – 18th Arrondissement Paris
@@ -93,17 +93,17 @@
           %section.course
             %header
               %h2 Breathless in Paris
-              %h3 Go on a wild crazy ride in black &amp; white
+              %h3 Go on a wild crazy ride in black <span class="amp">&amp;</span> white
               %img{:src => 'images/breathless.jpg', :width => '150', :height => '150', :title => "Breathless"}
-              .cost <strong>€120</strong> per person, includes dinner (max 4 per class)
+              .cost €120 per person, includes dinner (max 4 per class)
 
             :markdown
-              *  Arc de Triomphe/Champs Elysees/local cafés & bars 8th arrondissement Paris
+              *  Arc de Triomphe/Champs Elysees/local cafés <span class="amp">&amp;</span> bars 8th arrondissement Paris
               *  We’ll meet in the shadow of the Arc de Triomphe on the Champs Elysees as Michel (our hero) emerges  blinking into the early evening parisian light.
-              *  We follow Michel as he leads us on a merry dance avoiding the police trying to get the girl & the money.
-              *  Smoking, drinking, hats & sharp suits are encouraged.
-              *  All pictures will be shot or converted into Black & White.
-              *  We end the wild crazy ride in a bar eating, drinking, looking & discussing our amazing pictures.
+              *  We follow Michel as he leads us on a merry dance avoiding the police trying to get the girl <span class="amp">&amp;</span> the money.
+              *  Smoking, drinking, hats <span class="amp">&amp;</span> sharp suits are encouraged.
+              *  All pictures will be shot or converted into Black <span class="amp">&amp;</span> White.
+              *  We end the wild crazy ride in a bar eating, drinking, looking <span class="amp">&amp;</span> discussing our amazing pictures.
               *  The best pictures of the day will be published on the Paris Picture School Facebook site.
 
           %section.course
@@ -111,7 +111,7 @@
               %h2 The “Da Vinci Code” Louvre Photography Study Tour
               %h3 Crack the code to taking better photos
               %img{:src => 'images/davincicode.jpg', :width => '150', :height => '150', :title => "Da Vinci Code"}
-              .cost <strong>€120</strong> per person, includes lunch (max 4 per class)
+              .cost €120 per person, includes lunch (max 4 per class)
 
             :markdown
               * Palais Royal/Louvre/Tuilerie Gardens 1st arrondissement Paris
