--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -118,6 +118,9 @@ $right_image_start: 100px
   +border-radius(3px)
   z-index: 100
 
+.amp
+  font-style: italic
+
 p
   margin-bottom: 24px
 
@@ -134,12 +137,17 @@ h1
   line-height: 24px
   border-top: 1px solid #ccc
   padding-top: 12px
-#siteheader h1
-  font-size: 48px
-  letter-spacing: -1px
-  text-transform: none
-  margin: 48px 0 12px
-  border: 0
+#siteheader
+  h1
+    font-size: 48px
+    letter-spacing: -1px
+    text-transform: none
+    margin: 48px 0 12px
+    border: 0
+    font-weight: normal
+  h2
+    font-weight: normal
+    font-style: italic
 
 section
   position: relative
