--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -144,6 +144,7 @@ h1
     text-transform: none
     margin: 48px 0 12px
     border: 0
+    line-height: 1.2
     font-weight: normal
   h2
     font-weight: normal
@@ -237,7 +238,6 @@ table
   -webkit-border-radius: 5px
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5)
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5)
-  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25)
   border-bottom: 1px solid rgba(0, 0, 0, 0.25)
   position: relative
   cursor: pointer
