--- a/views/index.haml
+++ b/views/index.haml
@@ -31,7 +31,7 @@
     %meta{ :content => "", :name => "author" }
 
     -# Mobile viewport optimized: j.mp/bplateviewport
-    %meta{ :content => "width=device-width, initial-scale=1.0", :name => "viewport" }
+    %meta{ :content => "width=device-width, initial-scale=auto", :name => "viewport" }
 
     -# Place favicon.ico and apple-touch-icon.png in the root of your domain and delete these references
     -# %link{ :href => "/favicon.ico", :rel => "shortcut icon" }/
