--- a/views/index.haml
+++ b/views/index.haml
@@ -152,7 +152,9 @@
         %footer
           %ul
             %li
-              %a{:href=>"http://www.facebook.com/pages/Paris-Picture-School/122633637814287"} Find us on Facebook
+              %a{:href=>"http://www.facebook.com/parispictureschool"} Find us on Facebook
+            %li
+              %a{:href=>"http://www.twitter.com/parispictureschool"} Follow us on Twitter
             %li
               :javascript
                 //<![CDATA[
