--- a/views/index.haml
+++ b/views/index.haml
@@ -26,7 +26,7 @@
       Always force latest IE rendering engine (even in intranet) & Chrome Frame
     %meta{ :content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible" }
 
-    %title
+    %title the Paris Picture School : Photography classes in Paris
     %meta{ :content => "", :name => "description" }
     %meta{ :content => "", :name => "author" }
 
