--- a/views/index.haml
+++ b/views/index.haml
@@ -26,7 +26,7 @@
       Always force latest IE rendering engine (even in intranet) & Chrome Frame
     %meta{ :content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible" }
 
-    %title The Paris Picture School — Classes to teach to better photography Paris
+    %title The Paris Picture School — Classes to teach to better photography in Paris
 
     -# Mobile viewport optimized: j.mp/bplateviewport
     %meta{ :content => "width=device-width", :name => "viewport" }
@@ -145,7 +145,7 @@
           :markdown
             Laura Friezer graduated from Sydney College of the Arts (Sydney University) with a Bachelor of Visual Arts in 1994.
 
-            She has worked as a photographer for Australian Associated Press, The Sydney Morning Herald, The Sun Herald and The Age. Her work has appeared in various publications all over the world. She has photographed many well-known figures for the media from Bill Clinton to Morgan Freeman and Marcel Marceau as well as various comissions in the corporate , fashion and advertising world. She is now based in Paris, France.
+            She has worked as a photographer for Australian Associated Press, The Sydney Morning Herald, The Sun Herald and The Age. Her work has appeared in various publications all over the world. She has photographed many well-known figures for the media from Bill Clinton to Morgan Freeman and Marcel Marceau as well as various commissions in the corporate , fashion and advertising world. She is now based in Paris, France.
 
         %footer
           %ul
