--- a/views/index.haml
+++ b/views/index.haml
@@ -152,7 +152,7 @@
             %li
               %a{:href=>"http://www.facebook.com/parispictureschool"} Find us on Facebook
             %li
-              %a{:href=>"http://www.twitter.com/parispictureschool"} Follow us on Twitter
+              %a{:href=>"http://www.twitter.com/parispicschool"} Follow us on Twitter
             %li
               :javascript
                 //<![CDATA[
