--- a/public/stylesheets/sass/_boilerplate_top.scss
+++ b/public/stylesheets/sass/_boilerplate_top.scss
@@ -152,7 +152,7 @@ body, select, input, textarea {
   /* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */
   color: #444;
   /* Set your base font here, to apply evenly */
-  font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman" serif;
+  font-family: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif;
 }
 
 /* Headers (h1, h2, etc) have no default font-size or margin; define those yourself */
