--- a/views/index.haml
+++ b/views/index.haml
@@ -63,7 +63,7 @@
             %h2 Learn how to take better photos in Paris
         %section#intro
           %p Have fun discovering the magic of light <span class="amp">&amp;</span> composition in the city of light.
-          %p With each tour having a different movie theme and a actor supplied playing the main part, you will photograph the ancient palaces <span class="amp">&amp;</span> buildings, beautiful gardens <span class="amp">&amp;</span> hidden laneways of Paris as seen in the movies.
+          %p With each tour having a different movie theme and an actor supplied playing the main part, you will photograph the ancient palaces <span class="amp">&amp;</span> buildings, beautiful gardens <span class="amp">&amp;</span> hidden laneways of Paris as seen in the movies.
           %p The small group (maximum 4 students) guarantees the individual attention that will transform the way you use your camera and enable you to simply take better photos.
           %p Wind your way through the famous quartiers of Paris with a local French actor/model whilst being shown all the secrets to taking great pictures by professional photographer <a href="http://laurafriezer.com/">Laura Friezer</a> who has photographed everyone from Bill Clinton to Morgan Freeman and everyone in between.
           %p Take your time to enjoy Paris in all its splendour before sitting down with your guides and fellow students in a Parisian restaurant to relax, review and discuss your photos over a classic French lunch.
@@ -145,7 +145,7 @@
           :markdown
             Laura Friezer graduated from Sydney College of the Arts (Sydney University) with a Bachelor of Visual Arts in 1994.
 
-            She has worked as a photographer for Australian Associated Press, The Sydney Morning Herald, The Sun Herald and The Age. Her work has appeared in various publications all over the world. She has photographed many well-known figures for the media from Bill Clinton to Morgan Freeman and Marcel Marceau as well as various commissions in the corporate , fashion and advertising world. She is now based in Paris, France.
+            She has worked as a photographer for Australian Associated Press, The Sydney Morning Herald, The Sun Herald and The Age. Her work has appeared in various publications all over the world. She has photographed many well-known figures for the media from Bill Clinton to Morgan Freeman and Marcel Marceau as well as various commissions in the corporate, fashion and advertising world. She is now based in Paris, France.
 
         %footer
           %ul
