--- a/views/index.haml
+++ b/views/index.haml
@@ -26,7 +26,7 @@
       Always force latest IE rendering engine (even in intranet) & Chrome Frame
     %meta{ :content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible" }
 
-    %title The Paris Picture School — Classes to teach to better photography in Paris
+    %title The Paris Picture School — Photography Lessons &amp; Tours in Paris
 
     -# Mobile viewport optimized: j.mp/bplateviewport
     %meta{ :content => "width=device-width", :name => "viewport" }
