Rename it to Paris Picture School (lose 'the')

--- a/views/index.haml
+++ b/views/index.haml
@@ -26,7 +26,7 @@
       Always force latest IE rendering engine (even in intranet) & Chrome Frame
     %meta{ :content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible" }
 
-    %title The Paris Picture School — Photography Lessons &amp; Tours in Paris
+    %title Paris Picture School — Photography Lessons &amp; Tours in Paris
 
     -# Mobile viewport optimized: j.mp/bplateviewport
     %meta{ :content => "width=device-width", :name => "viewport" }
@@ -59,7 +59,7 @@
       #container
         %header#siteheader
           %hgroup
-            %h1 the Paris Picture School
+            %h1 Paris Picture School
             %h2 Learn how to take better photos in Paris
         %section#intro
           %p Have fun discovering the magic of light <span class="amp">&amp;</span> composition in the city of light.
