Added new meta description

--- a/views/index.haml
+++ b/views/index.haml
@@ -28,6 +28,8 @@
 
     %title Paris Picture School — Photography Lessons &amp; Tours in Paris
 
+    %meta{ :name => "description", :content => "Paris Picture School - Learn how to take better photos in Paris. Have fun discovering the magic of light & composition in the city of light. With each tour having a different movie theme and an actor supplied playing the main part, you will photograph the ancient palaces & buildings, beautiful gardens & hidden laneways of Paris as seen in the movies."}
+
     -# Mobile viewport optimized: j.mp/bplateviewport
     %meta{ :content => "width=device-width", :name => "viewport" }
 
