Change price of the Breathless tour

--- a/views/index.haml
+++ b/views/index.haml
@@ -95,7 +95,7 @@
               %h2 Breathless in Paris
               %h3 Go on a wild crazy ride in black <span class="amp">&amp;</span> white
               %img{:src => 'images/breathless.jpg', :width => '150', :height => '150', :title => "Breathless"}
-              .cost €120 per person, includes dinner (max 4 per class)
+              .cost €80 per person (max 4 per class)
 
             :markdown
               *  Arc de Triomphe/Champs Elysees/local cafés <span class="amp">&amp;</span> bars 8th arrondissement Paris
