--- a/views/index.haml
+++ b/views/index.haml
@@ -99,7 +99,7 @@
 
             :markdown
               *  Arc de Triomphe/Champs Elysees/local cafés <span class="amp">&amp;</span> bars 8th arrondissement Paris
-              *  We’ll meet in the shadow of the Arc de Triomphe on the Champs Elysees as Michel (our hero) emerges  blinking into the early evening parisian light.
+              *  We’ll meet in the shadow of the Arc de Triomphe on the Champs Elysees as Michel (our hero) emerges blinking into the parisian night.
               *  We follow Michel as he leads us on a merry dance avoiding the police trying to get the girl <span class="amp">&amp;</span> the money.
               *  Smoking, drinking, hats <span class="amp">&amp;</span> sharp suits are encouraged.
               *  All pictures will be shot or converted into Black <span class="amp">&amp;</span> White.
