--- a/views/index.haml
+++ b/views/index.haml
@@ -80,7 +80,7 @@
               %h2 The “Amélie” Montmartre Photography Study Tour
               %h3 Learn how to take better photos in Paris with Amelie
               %img{:src => 'images/amelie.jpg', :width => '150', :height => '150', :title => "Amelie Poster"}
-              .cost €120 per person, includes lunch (max 4 per class)
+              .cost €96 per person, includes lunch & model (max 4 per class)
 
             :markdown
               * Abbesses/Sacre Coeur/Rue Lepic – 18th Arrondissement Paris
@@ -95,7 +95,7 @@
               %h2 Breathless in Paris
               %h3 Go on a wild crazy ride in black <span class="amp">&amp;</span> white
               %img{:src => 'images/breathless.jpg', :width => '150', :height => '150', :title => "Breathless"}
-              .cost €80 per person (max 4 per class)
+              .cost €76 per person includes model (max 4 per class)
 
             :markdown
               *  Arc de Triomphe/Champs Elysees/local cafés <span class="amp">&amp;</span> bars 8th arrondissement Paris
@@ -111,7 +111,7 @@
               %h2 The “Da Vinci Code” Louvre Photography Study Tour
               %h3 Crack the code to taking better photos
               %img{:src => 'images/davincicode.jpg', :width => '150', :height => '150', :title => "Da Vinci Code"}
-              .cost €120 per person, includes lunch (max 4 per class)
+              .cost €96 per person, includes lunch & model (max 4 per class)
 
             :markdown
               * Palais Royal/Louvre/Tuilerie Gardens 1st arrondissement Paris
