--- a/views/index.haml
+++ b/views/index.haml
@@ -196,4 +196,18 @@
       s.parentNode.insertBefore(g,s)}(document,'script'));
 
 
+    -# Guages analytics
+    :javascript
+      var _gauges = _gauges || [];
+      (function() {
+        var t   = document.createElement('script');
+        t.type  = 'text/javascript';
+        t.async = true;
+        t.id    = 'gauges-tracker';
+        t.setAttribute('data-site-id', '4e8a9deb613f5d4f4f000001');
+        t.src = '//secure.gaug.es/track.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(t, s);
+      })();
+
 
