--- a/views/index.haml
+++ b/views/index.haml
@@ -171,6 +171,7 @@
     %script{ :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" }
     :javascript
       !window.jQuery && document.write(unescape('%3Cscript src="js/jquery-1.7.1.min.js"%3E%3C/script%3E'))
+    %script{ :src => "/js/jquery.imagesloaded.js" }
     %script{ :src => "/js/jquery.tmpl.min.js" }
     %script{ :src => "/js/script.js" }
 
